--- a/programming/tarefa7.ipynb
+++ b/programming/tarefa7.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "# 1\n",
+    "x = (1, 2, 3)\n",
     "x = 0, 1, 2, 3, 4, 5, 6, 7, 8, 9"
    ]
   },
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "3f37561f",
    "metadata": {},
    "outputs": [
@@ -44,8 +45,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(False, [1, 'a', 3, 2])\n",
-      "(True, [1, 4, 3, 2])\n"
+      "(False, [1, 'a', 3.7, 2])\n",
+      "(True, [1, 2.8, 2.2, 3.7, 2])\n"
      ]
     }
    ],
@@ -56,16 +57,22 @@
     "    refined_list = []\n",
     "\n",
     "    for element in list:\n",
-    "        try:\n",
-    "            refined_list.append(int(element))\n",
-    "        except ValueError:\n",
+    "        if type(element) == str:\n",
+    "            if element.isnumeric():\n",
+    "                refined_list.append(int(element))\n",
+    "            else:\n",
+    "                try:\n",
+    "                    refined_list.append(float(element))\n",
+    "                except ValueError:\n",
+    "                    refined_list.append(element)\n",
+    "                    all_numeric = False\n",
+    "        else:\n",
     "            refined_list.append(element)\n",
-    "            all_numeric = False\n",
     "\n",
     "    return all_numeric, refined_list\n",
     "\n",
-    "print(is_numeric(['1', 'a', '3', '2']))\n",
-    "print(is_numeric(['1', '4', '3', '2']))"
+    "print(is_numeric(['1', 'a', '3.7', '2']))\n",
+    "print(is_numeric(['1', '2.8', 2.2, '3.7', '2']))"
    ]
   },
   {
